# tool-use-dpo-negative-sources

./: .env.example  .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
artifacts/stage3d/: analysis_summary.md  claim_scope_note.md  clean_vs_unfiltered_delta.csv  cost_table.csv  grouped_bootstrap_by_prompt_id.csv  metric_delta_vs_r004.csv  saturation_diagnostic.csv
artifacts/stage4/bootstrap/: bootstrap_report.md  pairwise_bootstrap_ci.csv  (+1 more)
configs/: artifact_manifest.json  benchmark_versions.md  dpo_eval_config.json  run_inventory.csv
data/pair_hashes/: README.md
data_pipeline/: README.md
docs/: audit_rubric.md  claims_and_limitations.md  contamination_overlap.md  data_and_model_access.md  data_availability_statement.md  data_license_table.md  evidence_map.md  model_license_table.md  negative_construction.md  paper_manifest_summary.md  redistribution_policy.md  reference_verification.md  release_readiness.md  reproduction.md
environment/: requirements.txt  system_info.txt
manifests/: benchmark_manifest.yaml  run_manifest.yaml
manifests/eval/: category_distribution.csv  eval_slice_manifest.jsonl
results/aggregate/: main_metrics_absolute.csv  main_metrics_absolute.json  main_metrics_delta_vs_sft.csv  main_metrics_delta_vs_sft.json
scripts/: compute_grouped_bootstrap.py  reproduce_figures.py  reproduce_tables.py  verify_artifacts.py  verify_overlap.py
src/tool_use_dpo_negative_sources/: __init__.py  bootstrap.py  figures.py  paths.py  tables.py  verify.py
tests/: test_artifacts.py
(+42 files in other folders)
