[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-use-dpo-negative-sources-artifacts"
version = "0.1.0"
description = "Artifact-level reproduction package for a fixed-budget tool-use DPO technical report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
plot = [
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
